feat(java): add Java25-debian13 on all architectures (#1871)
* feat(java): add Java 25 support on all architectures
* feat: java 25 on debian13 instead of debian12
* feat: update private repos for java temurin
* feat: add riscv64 architecture
* chores: rename JAVA_ARCHITECTURES to JAVA_OPENJDK_ARCHITECTURES
* fix: use proper sha256 values
* fix: add trixie_java files to unlock tests
* chore: update bazel lock file
* refactor: remove riscv64 references
* chore: update MODULE.bazel.lock file
* chore: update MODULE.bazel.lock (after merge with python)
* chore: update gcc version for trixie_java.yaml
* chore: update MODULE.bazel.lock
* fix: add mergedusr when repo starts with trixie
* fix: update expected versions to 25 instead of 25.0.0

--- a/java/BUILD
+++ b/java/BUILD
@@ -2,7 +2,8 @@ load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("@java_versions//:versions.bzl", "JAVA_RELEASE_VERSIONS")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//base:distro.bzl", "DISTROS")
+load("//:checksums.bzl", "BASE_ARCHITECTURES")
+load("//base:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
 load("//java:jre_ver.bzl", "jre_ver")
 load("//private/oci:defs.bzl", "java_image")
 load("//private/util:deb.bzl", "deb")
@@ -15,22 +16,27 @@ USERS = [
     "nonroot",
 ]
 
-JAVA_ARCHITECTURES = [
-    "amd64",
-    "arm64",
+JAVA_OPENJDK_ARCHITECTURES = BASE_ARCHITECTURES + [
     "s390x",
     "ppc64le",
 ]
 
-JAVA_21_ARCHITECTURES = [
-    "amd64",
-    "arm64",
-    # "s390x", adoptium doesn't have a build yet
-    "ppc64le",
+JAVA_OPENJDK_VERSIONS_PER_DISTRO = [
+    ("17", "debian12"),
 ]
 
-JAVA_VERSIONS_PER_DISTRO = [
-    ("17", "debian12"),
+# Temurin related variables
+JAVA_TEMURIN_ARCHITECTURES = JAVA_OPENJDK_ARCHITECTURES + [
+]
+
+JAVA_TEMURIN_VERSIONS = [
+    "21",
+    "25",
+]
+
+JAVA_TEMURIN_VERSIONS_PER_DISTRO = [
+    ("21", "debian12"),
+    ("25", "debian13"),
 ]
 
 [
@@ -38,8 +44,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "cacerts_java_" + arch + "_" + distro,
         archive = "//common:cacerts_" + distro + "_" + arch,
     )
-    for distro in DISTROS
-    for arch in JAVA_ARCHITECTURES
+    for distro in DISTROS + PREVIEW_DISTROS
+    for arch in JAVA_TEMURIN_ARCHITECTURES
 ]
 
 [
@@ -56,11 +62,11 @@ JAVA_VERSIONS_PER_DISTRO = [
             ),
         ],
     )
-    for arch in JAVA_ARCHITECTURES
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
-# special case for java 21, we will start using temurin, the goal is to slowly transition all builds
+# Starting from java 21, we're using temurin, the goal is to slowly transition all builds
 # to temurin, to also back support java 11 on debian12.
 [
     pkg_tar(
@@ -72,8 +78,8 @@ JAVA_VERSIONS_PER_DISTRO = [
             "@temurin" + java_version + "_jre_" + arch,
         ],
     )
-    for arch in JAVA_21_ARCHITECTURES
-    for java_version in ["21"]
+    for arch in JAVA_TEMURIN_ARCHITECTURES
+    for java_version in JAVA_TEMURIN_VERSIONS
 ]
 
 [
@@ -86,8 +92,8 @@ JAVA_VERSIONS_PER_DISTRO = [
             "@temurin" + java_version + "_jdk_" + arch,
         ],
     )
-    for arch in JAVA_21_ARCHITECTURES
-    for java_version in ["21"]
+    for arch in JAVA_TEMURIN_ARCHITECTURES
+    for java_version in JAVA_TEMURIN_VERSIONS
 ]
 
 # Base
@@ -96,7 +102,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         name = "java_base" + mode + "_" + user + "_" + distro,
         images = [
             "java_base" + mode + "_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_TEMURIN_ARCHITECTURES
         ],
     )
     for mode in [
@@ -104,7 +110,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         "_debug",
     ]
     for user in USERS
-    for distro in DISTROS
+    for distro in DISTROS + PREVIEW_DISTROS
 ]
 
 # a build-base that isn't published, but used to generate our publishable base and as a base for temurin
@@ -139,8 +145,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         "_debug",
     ]
     for user in USERS
-    for distro in DISTROS
-    for arch in JAVA_ARCHITECTURES
+    for distro in DISTROS + PREVIEW_DISTROS
+    for arch in JAVA_TEMURIN_ARCHITECTURES
 ]
 
 [
@@ -161,21 +167,21 @@ JAVA_VERSIONS_PER_DISTRO = [
         "_debug",
     ]
     for user in USERS
-    for distro in DISTROS
-    for arch in JAVA_ARCHITECTURES
+    for distro in DISTROS + PREVIEW_DISTROS
+    for arch in JAVA_TEMURIN_ARCHITECTURES
 ]
 
-# Java JRE Headless
+# Java JRE Headless (only for OpenJDK 17)
 [
     oci_image_index(
         name = "java" + java_version + "_" + user + "_" + distro,
         images = [
             "java" + java_version + "_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_OPENJDK_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -199,22 +205,22 @@ JAVA_VERSIONS_PER_DISTRO = [
             ":openjdk_jre_headless_" + java_version + "_" + arch + "_" + distro,
         ],
     )
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_OPENJDK_ARCHITECTURES
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
-# Java JRE Headless - Debug
+# Java JRE Headless - Debug (only for OpenJDK 17)
 [
     oci_image_index(
         name = "java" + java_version + "_debug_" + user + "_" + distro,
         images = [
             "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_ARCHITECTURES
+            for arch in JAVA_OPENJDK_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -244,21 +250,21 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for arch in JAVA_ARCHITECTURES
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO
 ]
 
-# Temurin Java 21
+# Temurin Java 21+ JRE LTS
 [
     oci_image_index(
         name = "java" + java_version + "_" + user + "_" + distro,
         images = [
             "java" + java_version + "_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_21_ARCHITECTURES
+            for arch in JAVA_TEMURIN_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in [("21", "debian12")]
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -278,22 +284,22 @@ JAVA_VERSIONS_PER_DISTRO = [
             ":temurin_jre_" + java_version + "_" + arch,
         ],
     )
-    for arch in JAVA_21_ARCHITECTURES
+    for arch in JAVA_TEMURIN_ARCHITECTURES
     for user in USERS
-    for java_version, distro in [("21", "debian12")]
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
-# Temurin Java 21 Debug
+# Temurin Java 21+ JDK Debug LTS
 [
     oci_image_index(
         name = "java" + java_version + "_debug_" + user + "_" + distro,
         images = [
             "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro
-            for arch in JAVA_21_ARCHITECTURES
+            for arch in JAVA_TEMURIN_ARCHITECTURES
         ],
     )
     for user in USERS
-    for java_version, distro in [("21", "debian12")]
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -314,8 +320,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for arch in JAVA_21_ARCHITECTURES
-    for java_version, distro in [("21", "debian12")]
+    for arch in JAVA_TEMURIN_ARCHITECTURES
+    for java_version, distro in JAVA_TEMURIN_VERSIONS_PER_DISTRO
 ]
 
 [
@@ -332,7 +338,7 @@ JAVA_VERSIONS_PER_DISTRO = [
         "",
         "_debug",
     ]
-    for arch in JAVA_ARCHITECTURES
+    for arch in JAVA_TEMURIN_ARCHITECTURES
     for user in USERS
     for distro in DISTROS
 ]
@@ -348,8 +354,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO + [("21", "debian12")]
-    for arch in (JAVA_ARCHITECTURES if java_version != "21" else JAVA_21_ARCHITECTURES)
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO + JAVA_TEMURIN_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 [
@@ -363,8 +369,8 @@ JAVA_VERSIONS_PER_DISTRO = [
         ],
     )
     for user in USERS
-    for java_version, distro in JAVA_VERSIONS_PER_DISTRO + [("21", "debian12")]
-    for arch in (JAVA_ARCHITECTURES if java_version != "21" else JAVA_21_ARCHITECTURES)
+    for java_version, distro in JAVA_OPENJDK_VERSIONS_PER_DISTRO + JAVA_TEMURIN_VERSIONS_PER_DISTRO
+    for arch in JAVA_OPENJDK_ARCHITECTURES
 ]
 
 RULE_NAMES = [
@@ -372,6 +378,8 @@ RULE_NAMES = [
     ("java17_nonroot_debian12", "java17_nonroot_amd64_debian12"),
     ("java21_root_debian12", "java21_root_amd64_debian12"),
     ("java21_nonroot_debian12", "java21_nonroot_amd64_debian12"),
+    ("java25_root_debian13", "java25_root_amd64_debian13"),
+    ("java25_nonroot_debian13", "java25_nonroot_amd64_debian13"),
 ]
 
 [
