--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -5,7 +5,7 @@ load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("@rules_oci//oci:defs.bzl", "oci_image")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
-load("//base:distro.bzl", "DISTROS")
+load("//:distro.bzl", "DISTROS")
 
 package(default_visibility = ["//visibility:public"])
 
