--- a/java/BUILD
+++ b/java/BUILD
@@ -3,7 +3,7 @@ load("@java_versions//:versions.bzl", "JAVA_RELEASE_VERSIONS")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load("//:checksums.bzl", "BASE_ARCHITECTURES")
-load("//base:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
+load("//:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
 load("//java:jre_ver.bzl", "jre_ver")
 load("//private/oci:defs.bzl", "java_image")
 load("//private/util:deb.bzl", "deb")
