--- a/common/BUILD.bazel
+++ b/common/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@aspect_bazel_lib//lib:tar.bzl", "tar")
 load("@rules_distroless//distroless:defs.bzl", "cacerts", "group", "home", "locale", "os_release", "passwd")
 load("//:checksums.bzl", "ARCHITECTURES", "VERSIONS")
-load("//base:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
+load("//:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
 load("//private/util:deb.bzl", "deb")
 load(":variables.bzl", "MTIME", "NOBODY", "NONROOT", "OS_RELEASE", "ROOT", "quote")
 
