--- a/private/repos/deb/trixie_java.yaml
+++ b/private/repos/deb/trixie_java.yaml
@@ -8,6 +8,9 @@ sources:
     url: https://snapshot.debian.org/archive/debian/20251025T204106Z
   - channel: trixie-security main
     url: https://snapshot.debian.org/archive/debian-security/20251025T204106Z
+  # adoptium
+  - channel: trixie main
+    url: https://packages.adoptium.net/artifactory/deb
 
 archs:
   - amd64
@@ -19,22 +22,24 @@ packages:
   - fontconfig-config
   - fonts-dejavu-core
   - libbrotli1
+  - libbz2-1.0
   - libcrypt1 # TODO: glibc library for -lcrypt; maybe should be in cc?
   - libexpat1
   - libfontconfig1
   - libfreetype6
-  - libglib2.0-0
+  - libglib2.0-0t64
   - libgraphite2-3
   - libharfbuzz0b
   - libjpeg62-turbo
   - liblcms2-2
   - libpcre2-8-0
-  - libpng16-16
+  - libpng16-16t64
   - libuuid1
-  - openjdk-17-jdk-headless
-  - openjdk-17-jre-headless
   - zlib1g
   # java image builds off base (not cc)
   - gcc-14-base
   - libgcc-s1
   - libstdc++6
+  # adoptium
+  - temurin-25-jre
+  - temurin-25-jdk
